fixing alignment issue in quests

--- a/sagebrew/sagebrew/static/less/sb/general.less
+++ b/sagebrew/sagebrew/static/less/sb/general.less
@@ -1896,7 +1896,6 @@ textarea.sb_comment_input{
   }
 }
 
-
 #bgvid {
   position: fixed;
   top: 50%;
@@ -1924,4 +1923,8 @@ textarea.sb_comment_input{
   border-radius: 5px;
   background-color: @sb_green_extra_light;
   padding: 10px;
+}
+
+#epic-container {
+  min-height: 615px;
 }
